# holographic-tensor-networks

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/example_usage/: EXAMPLE_USAGE.md
docs/theory/: THEORY.md  fundamental_domain_isometry.py  geodesic_rays.py  parallel_postulates.py  poincare_tessellation_detail.py  thin_triangle.py
docs/theory_quantum/: THEORY_QUANTUM.md  entanglement_partition.py  hilbert_space_growth.py  ryu_takayanagi_formula.py  tensor_network_decomposition.py
src/holographic_tn/: geometry.py  helper.py  physics.py  tensor.py
src/holographic_tn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/holographic_tn/config/: entropy_method.py
src/holographic_tn/experimental/bp/: block_bp.py  bp.py  config.py
tests/: test_contractor_ket_subnetwork.py  test_cut_edges.py
tests/geometry/: test_geometry.py  test_geometry2.py
tests/gromov_boundary/: test_gromov_boundary.py
tests/rt/: convergence_data_D2_V800_M800-2599-50.pkl  convergence_data_D4_V10_M100-1499-200.pkl  convergence_data_D4_V10_M100-2599-200.pkl  convergence_data_D4_V30_M100-1499-200.pkl  convergence_data_D4_V50_M150-2499-50.pkl  convergence_data_D4_V50_M300-1999-50.pkl  convergence_data_D4_V50_M800-1999-50.pkl  convergence_data_D4_V50_M800-2599-50.pkl  test_rt_entropy.py  test_rt_performance.py  test_rt_ratio_stats.py  test_rt_ratio_stats2.py
tests/tensor/: test_tensor.py
validation/: rt_formula_validation.py  rt_nontrivial.py  rt_radius2_complex.py  symmetry_analysis.py
visualisation/: example4-2.py  example4.py
(+7 files in other folders)
